--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f7f7e044;
 }
 
 code {
@@ -17,10 +18,6 @@ app {
   grid-template-columns: 0.5fr 4fr;
 }
 
-aside nav {
-  height: 85vh;
-}
-
-main {
-  background-color: #f7f7e044;
+aside {
+  min-height: 85vh;
 }
